@@ -23,3 +23,9 @@ If you are interested in more details, see the Issue Tracker tickets that were r
 
 The `AmqpInboundChannelAdapter` and `AmqpInboundGateway` (and the respective Java DSL builders) now support an `org.springframework.amqp.rabbit.retry.MessageRecoverer` as an AMQP-specific alternative to the general purpose `RecoveryCallback`.
 See <<./amqp.adoc#amqp,AMQP Support>> for more information.
+
+[[x5.5-redis]]
+==== Redis Changes
+
+The `ReactiveRedisStreamMessageProducer` has now setters for all the `StreamReceiver.StreamReceiverOptionsBuilder` options, including an `onErrorResume` function.
+See <<./redis.adoc#redis,Redis Support>> for more information.
